@@ -1,4 +1,4 @@
-.TH katriac 1 "2017-09-16" "Katria Window Manager" "User Commands"
+.TH katriac 1 "2017-10-15" "Katria Window Manager" "User Commands"
 .\" --------------------------------------------------------------------
 .SH NAME
 katriac \- Client for katriawm
@@ -70,7 +70,7 @@ monitor. Some of them might have moved around.
 \fBlayout_set\fP \fIalgorithm\fP
 Set the layout algorithm on the currently visible workspace on the
 currently selected monitor. \fIalgorithm\fP must be one of \fBtile\fP,
-\fBmonocle\fP, \fBfloat\fP.
+\fBstack\fP, \fBmonocle\fP, \fBfloat\fP.
 .TP
 \fBmonitor_select\fP \fItarget\fP
 When multiple monitors are connected to your computer, you can use this
