@@ -9,6 +9,12 @@ next
     monitors. This *can* happen during reconfiguration of your monitor
     layout.
 
+  [Added]
+  - A new layout has been added: "Stack". It simply stacks all clients
+    vertically. This layout can be useful when dealing with clients that
+    produce wide output, for example when "tail -f"-ing multiple log
+    files.
+
 v17.09  2017-09-16
   [LICENSING]
   - The project has been relicensed under the MIT license (more
